include/codata_constants_2018.h

ADD_IMPORT extern const double INVERSE_METER_ATOMIC_MASS_UNIT_RELATIONSHIP;/**< u */
ADD_IMPORT extern const double U_INVERSE_METER_ATOMIC_MASS_UNIT_RELATIONSHIP;/**< u */
ADD_IMPORT extern const double INVERSE_METER_ELECTRON_VOLT_RELATIONSHIP;/**< eV */
ADD_IMPORT extern const double U_INVERSE_METER_ELECTRON_VOLT_RELATIONSHIP;/**< eV */
ADD_IMPORT extern const double INVERSE_METER_HARTREE_RELATIONSHIP;/**< E_h */
ADD_IMPORT extern const double U_INVERSE_METER_HARTREE_RELATIONSHIP;/**< E_h */
ADD_IMPORT extern const double INVERSE_METER_HERTZ_RELATIONSHIP;/**< Hz */
ADD_IMPORT extern const double U_INVERSE_METER_HERTZ_RELATIONSHIP;/**< Hz */
ADD_IMPORT extern const double INVERSE_METER_JOULE_RELATIONSHIP;/**< J */
ADD_IMPORT extern const double U_INVERSE_METER_JOULE_RELATIONSHIP;/**< J */
ADD_IMPORT extern const double INVERSE_METER_KELVIN_RELATIONSHIP;/**< K */
ADD_IMPORT extern const double U_INVERSE_METER_KELVIN_RELATIONSHIP;/**< K */
ADD_IMPORT extern const double INVERSE_METER_KILOGRAM_RELATIONSHIP;/**< kg */
ADD_IMPORT extern const double U_INVERSE_METER_KILOGRAM_RELATIONSHIP;/**< kg */
ADD_IMPORT extern const double INVERSE_OF_CONDUCTANCE_QUANTUM;/**< ohm */
ADD_IMPORT extern const double U_INVERSE_OF_CONDUCTANCE_QUANTUM;/**< ohm */
ADD_IMPORT extern const double JOSEPHSON_CONSTANT;/**< Hz V^-1 */
ADD_IMPORT extern const double U_JOSEPHSON_CONSTANT;/**< Hz V^-1 */
ADD_IMPORT extern const double JOULE_ATOMIC_MASS_UNIT_RELATIONSHIP;/**< u */
ADD_IMPORT extern const double U_JOULE_ATOMIC_MASS_UNIT_RELATIONSHIP;/**< u */
ADD_IMPORT extern const double JOULE_ELECTRON_VOLT_RELATIONSHIP;/**< eV */
ADD_IMPORT extern const double U_JOULE_ELECTRON_VOLT_RELATIONSHIP;/**< eV */
ADD_IMPORT extern const double JOULE_HARTREE_RELATIONSHIP;/**< E_h */
ADD_IMPORT extern const double U_JOULE_HARTREE_RELATIONSHIP;/**< E_h */
ADD_IMPORT extern const double JOULE_HERTZ_RELATIONSHIP;/**< Hz */
ADD_IMPORT extern const double U_JOULE_HERTZ_RELATIONSHIP;/**< Hz */
ADD_IMPORT extern const double JOULE_INVERSE_METER_RELATIONSHIP;/**< m^-1 */
ADD_IMPORT extern const double U_JOULE_INVERSE_METER_RELATIONSHIP;/**< m^-1 */
ADD_IMPORT extern const double JOULE_KELVIN_RELATIONSHIP;/**< K */
ADD_IMPORT extern const double U_JOULE_KELVIN_RELATIONSHIP;/**< K */
ADD_IMPORT extern const double JOULE_KILOGRAM_RELATIONSHIP;/**< kg */
ADD_IMPORT extern const double U_JOULE_KILOGRAM_RELATIONSHIP;/**< kg */
ADD_IMPORT extern const double KELVIN_ATOMIC_MASS_UNIT_RELATIONSHIP;/**< u */
ADD_IMPORT extern const double U_KELVIN_ATOMIC_MASS_UNIT_RELATIONSHIP;/**< u */
ADD_IMPORT extern const double KELVIN_ELECTRON_VOLT_RELATIONSHIP;/**< eV */
ADD_IMPORT extern const double U_KELVIN_ELECTRON_VOLT_RELATIONSHIP;/**< eV */
ADD_IMPORT extern const double KELVIN_HARTREE_RELATIONSHIP;/**< E_h */
ADD_IMPORT extern const double U_KELVIN_HARTREE_RELATIONSHIP;/**< E_h */
ADD_IMPORT extern const double KELVIN_HERTZ_RELATIONSHIP;/**< Hz */
ADD_IMPORT extern const double U_KELVIN_HERTZ_RELATIONSHIP;/**< Hz */
ADD_IMPORT extern const double KELVIN_INVERSE_METER_RELATIONSHIP;/**< m^-1 */
ADD_IMPORT extern const double U_KELVIN_INVERSE_METER_RELATIONSHIP;/**< m^-1 */
ADD_IMPORT extern const double KELVIN_JOULE_RELATIONSHIP;/**< J */
ADD_IMPORT extern const double U_KELVIN_JOULE_RELATIONSHIP;/**< J */
ADD_IMPORT extern const double KELVIN_KILOGRAM_RELATIONSHIP;/**< kg */
ADD_IMPORT extern const double U_KELVIN_KILOGRAM_RELATIONSHIP;/**< kg */
ADD_IMPORT extern const double KILOGRAM_ATOMIC_MASS_UNIT_RELATIONSHIP;/**< u */
ADD_IMPORT extern const double U_KILOGRAM_ATOMIC_MASS_UNIT_RELATIONSHIP;/**< u */
ADD_IMPORT extern const double KILOGRAM_ELECTRON_VOLT_RELATIONSHIP;/**< eV */
ADD_IMPORT extern const double U_KILOGRAM_ELECTRON_VOLT_RELATIONSHIP;/**< eV */
ADD_IMPORT extern const double KILOGRAM_HARTREE_RELATIONSHIP;/**< E_h */
ADD_IMPORT extern const double U_KILOGRAM_HARTREE_RELATIONSHIP;/**< E_h */
ADD_IMPORT extern const double KILOGRAM_HERTZ_RELATIONSHIP;/**< Hz */
ADD_IMPORT extern const double U_KILOGRAM_HERTZ_RELATIONSHIP;/**< Hz */
ADD_IMPORT extern const double KILOGRAM_INVERSE_METER_RELATIONSHIP;/**< m^-1 */
ADD_IMPORT extern const double U_KILOGRAM_INVERSE_METER_RELATIONSHIP;/**< m^-1 */
ADD_IMPORT extern const double KILOGRAM_JOULE_RELATIONSHIP;/**< J */
ADD_IMPORT extern const double U_KILOGRAM_JOULE_RELATIONSHIP;/**< J */
ADD_IMPORT extern const double KILOGRAM_KELVIN_RELATIONSHIP;/**< K */
ADD_IMPORT extern const double U_KILOGRAM_KELVIN_RELATIONSHIP;/**< K */
ADD_IMPORT extern const double LATTICE_PARAMETER_OF_SILICON;/**< m */
ADD_IMPORT extern const double U_LATTICE_PARAMETER_OF_SILICON;/**< m */
ADD_IMPORT extern const double LATTICE_SPACING_OF_IDEAL_SI__220;/**< m */
ADD_IMPORT extern const double U_LATTICE_SPACING_OF_IDEAL_SI__220;/**< m */
ADD_IMPORT extern const double LOSCHMIDT_CONSTANT__273_15_K__100_KPA;/**< m^-3 */
ADD_IMPORT extern const double U_LOSCHMIDT_CONSTANT__273_15_K__100_KPA;/**< m^-3 */
ADD_IMPORT extern const double LOSCHMIDT_CONSTANT__273_15_K__101_325_KPA;/**< m^-3 */
ADD_IMPORT extern const double U_LOSCHMIDT_CONSTANT__273_15_K__101_325_KPA;/**< m^-3 */
ADD_IMPORT extern const double LUMINOUS_EFFICACY;/**< lm W^-1 */
ADD_IMPORT extern const double U_LUMINOUS_EFFICACY;/**< lm W^-1 */
ADD_IMPORT extern const double MAG__FLUX_QUANTUM;/**< Wb */
ADD_IMPORT extern const double U_MAG__FLUX_QUANTUM;/**< Wb */
ADD_IMPORT extern const double MOLAR_GAS_CONSTANT;/**< J mol^-1 K^-1 */
ADD_IMPORT extern const double U_MOLAR_GAS_CONSTANT;/**< J mol^-1 K^-1 */
ADD_IMPORT extern const double MOLAR_MASS_CONSTANT;/**< kg mol^-1 */
ADD_IMPORT extern const double U_MOLAR_MASS_CONSTANT;/**< kg mol^-1 */
ADD_IMPORT extern const double MOLAR_MASS_OF_CARBON_12;/**< kg mol^-1 */
ADD_IMPORT extern const double U_MOLAR_MASS_OF_CARBON_12;/**< kg mol^-1 */
ADD_IMPORT extern const double MOLAR_PLANCK_CONSTANT;/**< J Hz^-1 mol^-1 */
ADD_IMPORT extern const double U_MOLAR_PLANCK_CONSTANT;/**< J Hz^-1 mol^-1 */
ADD_IMPORT extern const double MOLAR_VOLUME_OF_IDEAL_GAS__273_15_K__100_KPA;/**< m^3 mol^-1 */
ADD_IMPORT extern const double U_MOLAR_VOLUME_OF_IDEAL_GAS__273_15_K__100_KPA;/**< m^3 mol^-1 */
ADD_IMPORT extern const double MOLAR_VOLUME_OF_IDEAL_GAS__273_15_K__101_325_KPA;/**< m^3 mol^-1 */
ADD_IMPORT extern const double U_MOLAR_VOLUME_OF_IDEAL_GAS__273_15_K__101_325_KPA;/**< m^3 mol^-1 */
ADD_IMPORT extern const double MOLAR_VOLUME_OF_SILICON;/**< m^3 mol^-1 */
ADD_IMPORT extern const double U_MOLAR_VOLUME_OF_SILICON;/**< m^3 mol^-1 */
ADD_IMPORT extern const double MOLYBDENUM_X_UNIT;/**< m */
ADD_IMPORT extern const double U_MOLYBDENUM_X_UNIT;/**< m */
ADD_IMPORT extern const double MUON_COMPTON_WAVELENGTH;/**< m */
ADD_IMPORT extern const double U_MUON_COMPTON_WAVELENGTH;/**< m */
ADD_IMPORT extern const double MUON_ELECTRON_MASS_RATIO;/**<  */
ADD_IMPORT extern const double U_MUON_ELECTRON_MASS_RATIO;/**<  */
ADD_IMPORT extern const double MUON_G_FACTOR;/**<  */
ADD_IMPORT extern const double U_MUON_G_FACTOR;/**<  */
ADD_IMPORT extern const double MUON_MAG__MOM;/**< J T^-1 */
ADD_IMPORT extern const double U_MUON_MAG__MOM;/**< J T^-1 */
ADD_IMPORT extern const double MUON_MAG__MOM__ANOMALY;/**<  */
ADD_IMPORT extern const double U_MUON_MAG__MOM__ANOMALY;/**<  */
ADD_IMPORT extern const double MUON_MAG__MOM__TO_BOHR_MAGNETON_RATIO;/**<  */
ADD_IMPORT extern const double U_MUON_MAG__MOM__TO_BOHR_MAGNETON_RATIO;/**<  */
ADD_IMPORT extern const double MUON_MAG__MOM__TO_NUCLEAR_MAGNETON_RATIO;/**<  */
ADD_IMPORT extern const double U_MUON_MAG__MOM__TO_NUCLEAR_MAGNETON_RATIO;/**<  */
ADD_IMPORT extern const double MUON_MASS;/**< kg */
ADD_IMPORT extern const double U_MUON_MASS;/**< kg */