src/codata_.f90


real(c_double), protected, bind(C,name="INVERSE_METER_ATOMIC_MASS_UNIT_RELATIONSHIP") :: &
INVERSE_METER_ATOMIC_MASS_UNIT_RELATIONSHIP= !! 
real(c_double), protected, bind(C,name="U_INVERSE_METER_ATOMIC_MASS_UNIT_RELATIONSHIP") :: &
U_INVERSE_METER_ATOMIC_MASS_UNIT_RELATIONSHIP= !! 

real(c_double), protected, bind(C,name="INVERSE_METER_ELECTRON_VOLT_RELATIONSHIP") :: &
INVERSE_METER_ELECTRON_VOLT_RELATIONSHIP= !! 
real(c_double), protected, bind(C,name="U_INVERSE_METER_ELECTRON_VOLT_RELATIONSHIP") :: &
U_INVERSE_METER_ELECTRON_VOLT_RELATIONSHIP= !! 

real(c_double), protected, bind(C,name="INVERSE_METER_HARTREE_RELATIONSHIP") :: &
INVERSE_METER_HARTREE_RELATIONSHIP= !! 
real(c_double), protected, bind(C,name="U_INVERSE_METER_HARTREE_RELATIONSHIP") :: &
U_INVERSE_METER_HARTREE_RELATIONSHIP= !! 

real(c_double), protected, bind(C,name="INVERSE_METER_HERTZ_RELATIONSHIP") :: &
INVERSE_METER_HERTZ_RELATIONSHIP= !! 
real(c_double), protected, bind(C,name="U_INVERSE_METER_HERTZ_RELATIONSHIP") :: &
U_INVERSE_METER_HERTZ_RELATIONSHIP= !! 

real(c_double), protected, bind(C,name="INVERSE_METER_JOULE_RELATIONSHIP") :: &
INVERSE_METER_JOULE_RELATIONSHIP= !! 
real(c_double), protected, bind(C,name="U_INVERSE_METER_JOULE_RELATIONSHIP") :: &
U_INVERSE_METER_JOULE_RELATIONSHIP= !! 

real(c_double), protected, bind(C,name="INVERSE_METER_KELVIN_RELATIONSHIP") :: &
INVERSE_METER_KELVIN_RELATIONSHIP= !! 
real(c_double), protected, bind(C,name="U_INVERSE_METER_KELVIN_RELATIONSHIP") :: &
U_INVERSE_METER_KELVIN_RELATIONSHIP= !! 

real(c_double), protected, bind(C,name="INVERSE_METER_KILOGRAM_RELATIONSHIP") :: &
INVERSE_METER_KILOGRAM_RELATIONSHIP= !! 
real(c_double), protected, bind(C,name="U_INVERSE_METER_KILOGRAM_RELATIONSHIP") :: &
U_INVERSE_METER_KILOGRAM_RELATIONSHIP= !! 

real(c_double), protected, bind(C,name="INVERSE_OF_CONDUCTANCE_QUANTUM") :: &
INVERSE_OF_CONDUCTANCE_QUANTUM= !! 
real(c_double), protected, bind(C,name="U_INVERSE_OF_CONDUCTANCE_QUANTUM") :: &
U_INVERSE_OF_CONDUCTANCE_QUANTUM= !! 

real(c_double), protected, bind(C,name="JOSEPHSON_CONSTANT") :: &
JOSEPHSON_CONSTANT= !! 
real(c_double), protected, bind(C,name="U_JOSEPHSON_CONSTANT") :: &
U_JOSEPHSON_CONSTANT= !! 

real(c_double), protected, bind(C,name="JOULE_ATOMIC_MASS_UNIT_RELATIONSHIP") :: &
JOULE_ATOMIC_MASS_UNIT_RELATIONSHIP= !! 
real(c_double), protected, bind(C,name="U_JOULE_ATOMIC_MASS_UNIT_RELATIONSHIP") :: &
U_JOULE_ATOMIC_MASS_UNIT_RELATIONSHIP= !! 

real(c_double), protected, bind(C,name="JOULE_ELECTRON_VOLT_RELATIONSHIP") :: &
JOULE_ELECTRON_VOLT_RELATIONSHIP= !! 
real(c_double), protected, bind(C,name="U_JOULE_ELECTRON_VOLT_RELATIONSHIP") :: &
U_JOULE_ELECTRON_VOLT_RELATIONSHIP= !! 

real(c_double), protected, bind(C,name="JOULE_HARTREE_RELATIONSHIP") :: &
JOULE_HARTREE_RELATIONSHIP= !! 
real(c_double), protected, bind(C,name="U_JOULE_HARTREE_RELATIONSHIP") :: &
U_JOULE_HARTREE_RELATIONSHIP= !! 

real(c_double), protected, bind(C,name="JOULE_HERTZ_RELATIONSHIP") :: &
JOULE_HERTZ_RELATIONSHIP= !! 
real(c_double), protected, bind(C,name="U_JOULE_HERTZ_RELATIONSHIP") :: &
U_JOULE_HERTZ_RELATIONSHIP= !! 

real(c_double), protected, bind(C,name="JOULE_INVERSE_METER_RELATIONSHIP") :: &
JOULE_INVERSE_METER_RELATIONSHIP= !! 
real(c_double), protected, bind(C,name="U_JOULE_INVERSE_METER_RELATIONSHIP") :: &
U_JOULE_INVERSE_METER_RELATIONSHIP= !! 

real(c_double), protected, bind(C,name="JOULE_KELVIN_RELATIONSHIP") :: &
JOULE_KELVIN_RELATIONSHIP= !! 
real(c_double), protected, bind(C,name="U_JOULE_KELVIN_RELATIONSHIP") :: &
U_JOULE_KELVIN_RELATIONSHIP= !! 

real(c_double), protected, bind(C,name="JOULE_KILOGRAM_RELATIONSHIP") :: &
JOULE_KILOGRAM_RELATIONSHIP= !! 
real(c_double), protected, bind(C,name="U_JOULE_KILOGRAM_RELATIONSHIP") :: &
U_JOULE_KILOGRAM_RELATIONSHIP= !! 

real(c_double), protected, bind(C,name="KELVIN_ATOMIC_MASS_UNIT_RELATIONSHIP") :: &
KELVIN_ATOMIC_MASS_UNIT_RELATIONSHIP= !! 
real(c_double), protected, bind(C,name="U_KELVIN_ATOMIC_MASS_UNIT_RELATIONSHIP") :: &
U_KELVIN_ATOMIC_MASS_UNIT_RELATIONSHIP= !! 

real(c_double), protected, bind(C,name="KELVIN_ELECTRON_VOLT_RELATIONSHIP") :: &
KELVIN_ELECTRON_VOLT_RELATIONSHIP= !! 
real(c_double), protected, bind(C,name="U_KELVIN_ELECTRON_VOLT_RELATIONSHIP") :: &
U_KELVIN_ELECTRON_VOLT_RELATIONSHIP= !! 

real(c_double), protected, bind(C,name="KELVIN_HARTREE_RELATIONSHIP") :: &
KELVIN_HARTREE_RELATIONSHIP= !! 
real(c_double), protected, bind(C,name="U_KELVIN_HARTREE_RELATIONSHIP") :: &
U_KELVIN_HARTREE_RELATIONSHIP= !! 

real(c_double), protected, bind(C,name="KELVIN_HERTZ_RELATIONSHIP") :: &
KELVIN_HERTZ_RELATIONSHIP= !! 
real(c_double), protected, bind(C,name="U_KELVIN_HERTZ_RELATIONSHIP") :: &
U_KELVIN_HERTZ_RELATIONSHIP= !! 

real(c_double), protected, bind(C,name="KELVIN_INVERSE_METER_RELATIONSHIP") :: &
KELVIN_INVERSE_METER_RELATIONSHIP= !! 
real(c_double), protected, bind(C,name="U_KELVIN_INVERSE_METER_RELATIONSHIP") :: &
U_KELVIN_INVERSE_METER_RELATIONSHIP= !! 

real(c_double), protected, bind(C,name="KELVIN_JOULE_RELATIONSHIP") :: &
KELVIN_JOULE_RELATIONSHIP= !! 
real(c_double), protected, bind(C,name="U_KELVIN_JOULE_RELATIONSHIP") :: &
U_KELVIN_JOULE_RELATIONSHIP= !! 

real(c_double), protected, bind(C,name="KELVIN_KILOGRAM_RELATIONSHIP") :: &
KELVIN_KILOGRAM_RELATIONSHIP= !! 
real(c_double), protected, bind(C,name="U_KELVIN_KILOGRAM_RELATIONSHIP") :: &
U_KELVIN_KILOGRAM_RELATIONSHIP= !! 

real(c_double), protected, bind(C,name="KILOGRAM_ATOMIC_MASS_UNIT_RELATIONSHIP") :: &
KILOGRAM_ATOMIC_MASS_UNIT_RELATIONSHIP= !! 
real(c_double), protected, bind(C,name="U_KILOGRAM_ATOMIC_MASS_UNIT_RELATIONSHIP") :: &
U_KILOGRAM_ATOMIC_MASS_UNIT_RELATIONSHIP= !! 

real(c_double), protected, bind(C,name="KILOGRAM_ELECTRON_VOLT_RELATIONSHIP") :: &
KILOGRAM_ELECTRON_VOLT_RELATIONSHIP= !! 
real(c_double), protected, bind(C,name="U_KILOGRAM_ELECTRON_VOLT_RELATIONSHIP") :: &
U_KILOGRAM_ELECTRON_VOLT_RELATIONSHIP= !! 

real(c_double), protected, bind(C,name="KILOGRAM_HARTREE_RELATIONSHIP") :: &
KILOGRAM_HARTREE_RELATIONSHIP= !! 
real(c_double), protected, bind(C,name="U_KILOGRAM_HARTREE_RELATIONSHIP") :: &
U_KILOGRAM_HARTREE_RELATIONSHIP= !! 

real(c_double), protected, bind(C,name="KILOGRAM_HERTZ_RELATIONSHIP") :: &
KILOGRAM_HERTZ_RELATIONSHIP= !! 
real(c_double), protected, bind(C,name="U_KILOGRAM_HERTZ_RELATIONSHIP") :: &
U_KILOGRAM_HERTZ_RELATIONSHIP= !! 

real(c_double), protected, bind(C,name="KILOGRAM_INVERSE_METER_RELATIONSHIP") :: &
KILOGRAM_INVERSE_METER_RELATIONSHIP= !! 
real(c_double), protected, bind(C,name="U_KILOGRAM_INVERSE_METER_RELATIONSHIP") :: &
U_KILOGRAM_INVERSE_METER_RELATIONSHIP= !! 

real(c_double), protected, bind(C,name="KILOGRAM_JOULE_RELATIONSHIP") :: &
KILOGRAM_JOULE_RELATIONSHIP= !! 
real(c_double), protected, bind(C,name="U_KILOGRAM_JOULE_RELATIONSHIP") :: &
U_KILOGRAM_JOULE_RELATIONSHIP= !! 

real(c_double), protected, bind(C,name="KILOGRAM_KELVIN_RELATIONSHIP") :: &
KILOGRAM_KELVIN_RELATIONSHIP= !! 
real(c_double), protected, bind(C,name="U_KILOGRAM_KELVIN_RELATIONSHIP") :: &
U_KILOGRAM_KELVIN_RELATIONSHIP= !! 

real(c_double), protected, bind(C,name="LATTICE_PARAMETER_OF_SILICON") :: &
LATTICE_PARAMETER_OF_SILICON= !! 
real(c_double), protected, bind(C,name="U_LATTICE_PARAMETER_OF_SILICON") :: &
U_LATTICE_PARAMETER_OF_SILICON= !! 

real(c_double), protected, bind(C,name="LATTICE_SPACING_OF_IDEAL_SI__220") :: &
LATTICE_SPACING_OF_IDEAL_SI__220= !! 
real(c_double), protected, bind(C,name="U_LATTICE_SPACING_OF_IDEAL_SI__220") :: &
U_LATTICE_SPACING_OF_IDEAL_SI__220= !! 

real(c_double), protected, bind(C,name="LOSCHMIDT_CONSTANT__273_15_K__100_KPA") :: &
LOSCHMIDT_CONSTANT__273_15_K__100_KPA= !! 
real(c_double), protected, bind(C,name="U_LOSCHMIDT_CONSTANT__273_15_K__100_KPA") :: &
U_LOSCHMIDT_CONSTANT__273_15_K__100_KPA= !! 

real(c_double), protected, bind(C,name="LOSCHMIDT_CONSTANT__273_15_K__101_325_KPA") :: &
LOSCHMIDT_CONSTANT__273_15_K__101_325_KPA= !! 
real(c_double), protected, bind(C,name="U_LOSCHMIDT_CONSTANT__273_15_K__101_325_KPA") :: &
U_LOSCHMIDT_CONSTANT__273_15_K__101_325_KPA= !! 

real(c_double), protected, bind(C,name="LUMINOUS_EFFICACY") :: &
LUMINOUS_EFFICACY= !! 
real(c_double), protected, bind(C,name="U_LUMINOUS_EFFICACY") :: &
U_LUMINOUS_EFFICACY= !! 

real(c_double), protected, bind(C,name="MAG__FLUX_QUANTUM") :: &
MAG__FLUX_QUANTUM= !! 
real(c_double), protected, bind(C,name="U_MAG__FLUX_QUANTUM") :: &
U_MAG__FLUX_QUANTUM= !! 

real(c_double), protected, bind(C,name="MOLAR_GAS_CONSTANT") :: &
MOLAR_GAS_CONSTANT= !! 
real(c_double), protected, bind(C,name="U_MOLAR_GAS_CONSTANT") :: &
U_MOLAR_GAS_CONSTANT= !! 

real(c_double), protected, bind(C,name="MOLAR_MASS_CONSTANT") :: &
MOLAR_MASS_CONSTANT= !! 
real(c_double), protected, bind(C,name="U_MOLAR_MASS_CONSTANT") :: &
U_MOLAR_MASS_CONSTANT= !! 

real(c_double), protected, bind(C,name="MOLAR_MASS_OF_CARBON_12") :: &
MOLAR_MASS_OF_CARBON_12= !! 
real(c_double), protected, bind(C,name="U_MOLAR_MASS_OF_CARBON_12") :: &
U_MOLAR_MASS_OF_CARBON_12= !! 

real(c_double), protected, bind(C,name="MOLAR_PLANCK_CONSTANT") :: &
MOLAR_PLANCK_CONSTANT= !! 
real(c_double), protected, bind(C,name="U_MOLAR_PLANCK_CONSTANT") :: &
U_MOLAR_PLANCK_CONSTANT= !! 

real(c_double), protected, bind(C,name="MOLAR_VOLUME_OF_IDEAL_GAS__273_15_K__100_KPA") :: &
MOLAR_VOLUME_OF_IDEAL_GAS__273_15_K__100_KPA= !! 
real(c_double), protected, bind(C,name="U_MOLAR_VOLUME_OF_IDEAL_GAS__273_15_K__100_KPA") :: &
U_MOLAR_VOLUME_OF_IDEAL_GAS__273_15_K__100_KPA= !! 

real(c_double), protected, bind(C,name="MOLAR_VOLUME_OF_IDEAL_GAS__273_15_K__101_325_KPA") :: &
MOLAR_VOLUME_OF_IDEAL_GAS__273_15_K__101_325_KPA= !! 
real(c_double), protected, bind(C,name="U_MOLAR_VOLUME_OF_IDEAL_GAS__273_15_K__101_325_KPA") :: &
U_MOLAR_VOLUME_OF_IDEAL_GAS__273_15_K__101_325_KPA= !! 

real(c_double), protected, bind(C,name="MOLAR_VOLUME_OF_SILICON") :: &
MOLAR_VOLUME_OF_SILICON= !! 
real(c_double), protected, bind(C,name="U_MOLAR_VOLUME_OF_SILICON") :: &
U_MOLAR_VOLUME_OF_SILICON= !! 

real(c_double), protected, bind(C,name="MOLYBDENUM_X_UNIT") :: &
MOLYBDENUM_X_UNIT= !! 
real(c_double), protected, bind(C,name="U_MOLYBDENUM_X_UNIT") :: &
U_MOLYBDENUM_X_UNIT= !! 

real(c_double), protected, bind(C,name="MUON_COMPTON_WAVELENGTH") :: &
MUON_COMPTON_WAVELENGTH= !! 
real(c_double), protected, bind(C,name="U_MUON_COMPTON_WAVELENGTH") :: &
U_MUON_COMPTON_WAVELENGTH= !! 

real(c_double), protected, bind(C,name="MUON_ELECTRON_MASS_RATIO") :: &
MUON_ELECTRON_MASS_RATIO= !! 
real(c_double), protected, bind(C,name="U_MUON_ELECTRON_MASS_RATIO") :: &
U_MUON_ELECTRON_MASS_RATIO= !! 

real(c_double), protected, bind(C,name="MUON_G_FACTOR") :: &
MUON_G_FACTOR= !! 
real(c_double), protected, bind(C,name="U_MUON_G_FACTOR") :: &
U_MUON_G_FACTOR= !! 

real(c_double), protected, bind(C,name="MUON_MAG__MOM") :: &
MUON_MAG__MOM= !! 
real(c_double), protected, bind(C,name="U_MUON_MAG__MOM") :: &
U_MUON_MAG__MOM= !! 

real(c_double), protected, bind(C,name="MUON_MAG__MOM__ANOMALY") :: &
MUON_MAG__MOM__ANOMALY= !! 
real(c_double), protected, bind(C,name="U_MUON_MAG__MOM__ANOMALY") :: &
U_MUON_MAG__MOM__ANOMALY= !! 

real(c_double), protected, bind(C,name="MUON_MAG__MOM__TO_BOHR_MAGNETON_RATIO") :: &
MUON_MAG__MOM__TO_BOHR_MAGNETON_RATIO= !! 
real(c_double), protected, bind(C,name="U_MUON_MAG__MOM__TO_BOHR_MAGNETON_RATIO") :: &
U_MUON_MAG__MOM__TO_BOHR_MAGNETON_RATIO= !! 

real(c_double), protected, bind(C,name="MUON_MAG__MOM__TO_NUCLEAR_MAGNETON_RATIO") :: &
MUON_MAG__MOM__TO_NUCLEAR_MAGNETON_RATIO= !! 
real(c_double), protected, bind(C,name="U_MUON_MAG__MOM__TO_NUCLEAR_MAGNETON_RATIO") :: &
U_MUON_MAG__MOM__TO_NUCLEAR_MAGNETON_RATIO= !! 

real(c_double), protected, bind(C,name="MUON_MASS") :: &
MUON_MASS= !! 
real(c_double), protected, bind(C,name="U_MUON_MASS") :: &
U_MUON_MASS= !! 
